@@ -1,3 +1,11 @@
+2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Add new GeanyFunctions API.
+   Avoid crashes when LANG environment variable can't be read
+   (e.g. on Windows).
+
+
 2008-05-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * configure.in:
